# Calculo_Grasa_corporal

./: .dockerignore  .gitignore  ACLARACIONES DEL PROYECTO.docx  CONCEPTO_PROYECTO.docx  Dockerfile.back  Dockerfile.front  K.docx  LICENSE  README.md  app.py  build.json  cloudbuild.yaml  debug_pipeline.py  debug_preprocessor.py  debug_train_pipeline.py  docker-compose.yml  pyproject.toml  requirements.txt  sync_to_hopsworks.py  test_api.py  test_hopswork.py  tokerns importantes.docx
.github/workflows/: hopsworks-ci.yml
Grasa_corporal/: Makefile  setup.py
Grasa_corporal/docs/: conf.py  index.rst  make.bat
app/: api_client_app.py  app.py  monitoring_app.py
backend/: firestore_client.py  main.py  requirements.txt
docs/: Makefile
frontend/: requirements.txt
models/: label_encoders.joblib  rf_pipeline_optuna_2025-06-01.pkl  rf_pipeline_optuna_2025-06-08.pkl  scaler.joblib
notebooks/: 01_exploraciones_datos.ipynb  02_Feature Engineering.ipynb  03_Preprocesamiento.ipynb  04_Entrenamiento.ipynb  05_Guardar_modelo.ipynb  06_Pipeline_completo.ipynb  07_Optimizacion_Optuna.ipynb  08_Comparar_modelos.ipynb  09_monitoring.ipynb  notebookprueba.ipynb
notebooks/data/interim/: feature_engineered_data.csv
notebooks/data/processed/: prepared_data.csv  preprocessed_data.csv
notebooks/models/: rf_pipeline_optuna.pkl
reports/: model_report.json
scripts/: batch_infer.py  features_setup.py  train_and_register.py
src/data/: make_dataset.py
src/feature_store/: feature_store_utils.py  versioning_and_inference.py
src/features/: build_features.py  preprocessing.py
src/models/: predict_model.py  train_pipeline.py  train_pipeline_optuna.py
