[project]
name = "grasa-corporal"
version = "0.1.0"
description = "Predicción de grasa corporal"
authors = [
    {name = "Antonio Lozano", email = "alozano@asesa.es"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    "ipykernel (>=6.29.5,<7.0.0)",
    "python = ">=3.9,<3.13",
    "jupyter (>=1.1.1,<2.0.0)",
    "pandas <2.2.0",
    "numpy <2.0.0",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "xgboost (>=1.7.6,<2.0.0)",
    "optuna (>=4.3.0,<5.0.0)",
    "click (>=8.2.0,<9.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "streamlit (>=1.45.1,<2.0.0)",
    "hopsworks >=4.2.4,<5.0.0"
]

